# finic

./: .env.example  .gitignore  =1.3.0  CONTRIBUTING.md  LICENSE  README-draft.md  README.md  docker-compose.yml  package-lock.json  run_local.sh  testscript.py
chrome/: .gitignore  Dockerfile  README.md  pyproject.toml  testscript.py
chrome/browser_session/: __init__.py  browser_session.py
chrome/chrome/: __init__.py  main.py
chrome/finic_client/: __init__.py  finic_client.py
chrome/port_manager/: __init__.py  port_manager.py
chrome/server/: main.py
frontend/: .env  (+11 more)
legacy/deployer/: pyproject.toml
python_library/: .gitignore  README.md  pyproject.toml  setup.py
python_library/baml_client/: globals.py  inlinedbaml.py  partial_types.py  type_builder.py
python_library/baml_src/: clients.baml  generators.baml
python_library/finic/: capture.py  cli.py  copilot.py  finic.py  selectors.py  utils.py
python_library/finic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_library/finic_py/: __init__.py  capture.py  cli.py  copilot.py  finic.py  test.py  utils.py
python_library/finicapi/: __init__.py  cli.py  finic.py  generate_selector.py  secrets_manager.py  selectors.py
python_library/finicapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sample-project/: LICENSE  README.md  finic_config.json  input.json.example  pyproject.toml
sample-project/main/: main.py
sample-project/models/: __init__.py
server/: .gitignore  Dockerfile  README.md  docker_pyproject.toml  example.env  nohup.out  pyproject.toml
server/agent_deployer/: agent_deployer.py
server/agent_runner/: agent_runner.py
server/ai/: __init__.py  ai.py
server/appstatestore/: statestore.py
server/baml_client/: __init__.py  async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
server/baml_src/: copilot.baml  generators.baml  selector.baml
server/chat/: __init__.py  chat.py
server/chat-widget/: gather_documents.py  main.py
server/chunker/: __init__.py  chunker.py
server/connectors/: connector_utils.py
server/copilot/: __init__.py  copilot.py
server/data_connector/: __init__.py  data_connector.py
server/database/: database.py
server/discord/: bot.py  requirements.txt
server/document-upload/: gather_documents.py
server/document_processors/: PIIRedactor.py  __init__.py
server/email_sender/: __init__.py  email_sender.py
server/job_deployer/: __init__.py  job_deployer.py
server/job_runner/: __init__.py  job_runner.py
server/logger/: __init__.py  logger.py
server/lois/: __init__.py  loi.docx  loi.py  loi_generator.py  loi_testing.py  stanford_basic.py  stanford_basic_loi.docx  ~$anford_basic_loi.docx
server/models/: __init__.py  api.py  models.py  node_configurations.py
server/newsletter/: __init__.py  newsletter.py
server/node_runner/: __init__.py  destinations.py  node_runner.py  sources.py  transformations.py
server/notifications_manager/: __init__.py  notifications_manager.py
server/ranking_helper/: __init__.py  ranking_helper.py
server/recommendations/: __init__.py  recommendations.py
server/scheduled-discord-messages/: main.py
server/scheduled_job_helper/: __init__.py  scheduled_job_helper.py
server/server/: __init__.py  main.py
server/test/: test.py
server/utils/: __init__.py  html_utils.py
server/vectorstore/: __init__.py  qdrant_vectorstore.py
server/webscraper/: __init__.py  webscraper.py
server/worker_client/: __init__.py  worker_client.py
server/workflow_job_runner/: __init__.py  workflow_job_runner.py
server/workflow_runner/: workflow_runner.py
sidekick-server/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
sidekick-server/appstatestore/: statestore.py
sidekick-server/connectors/: connector_utils.py
sidekick-server/datastore/: datastore.py  factory.py
sidekick-server/llm/: LLM.py
sidekick-server/logger/: __init__.py  logger.py
sidekick-server/models/: api.py  models.py
sidekick-server/pages_cache_bentoml/: _en_latest.html  _en_latest__modules_bentoml__internal_batch_spark.html.html  _en_latest__modules_bentoml__internal_bento_bento.html.html  _en_latest__modules_bentoml__internal_container.html.html  _en_latest__modules_bentoml__internal_frameworks_catboost.html.html  _en_latest__modules_bentoml__internal_frameworks_fastai.html.html  _en_latest__modules_bentoml__internal_frameworks_keras.html.html  _en_latest__modules_bentoml__internal_frameworks_lightgbm.html.html  _en_latest__modules_bentoml__internal_frameworks_mlflow.html.html  _en_latest__modules_bentoml__internal_frameworks_onnx.html.html  _en_latest__modules_bentoml__internal_frameworks_picklable.html.html  _en_latest__modules_bentoml__internal_frameworks_pytorch.html.html  _en_latest__modules_bentoml__internal_frameworks_pytorch_lightning.html.html  _en_latest__modules_bentoml__internal_frameworks_sklearn.html.html  _en_latest__modules_bentoml__internal_frameworks_tensorflow_v2.html.html  _en_latest__modules_bentoml__internal_frameworks_torchscript.html.html  _en_latest__modules_bentoml__internal_frameworks_transformers.html.html  _en_latest__modules_bentoml__internal_frameworks_xgboost.html.html  _en_latest__modules_bentoml__internal_io_descriptors_base.html.html  _en_latest__modules_bentoml__internal_io_descriptors_file.html.html  _en_latest__modules_bentoml__internal_io_descriptors_image.html.html  _en_latest__modules_bentoml__internal_io_descriptors_json.html.html  _en_latest__modules_bentoml__internal_io_descriptors_multipart.html.html  _en_latest__modules_bentoml__internal_io_descriptors_numpy.html.html  _en_latest__modules_bentoml__internal_io_descriptors_pandas.html.html  _en_latest__modules_bentoml__internal_io_descriptors_text.html.html  _en_latest__modules_bentoml__internal_models_model.html.html  _en_latest__modules_bentoml__internal_runner_runnable.html.html  _en_latest__modules_bentoml__internal_runner_runner.html.html  _en_latest_concepts.html  (+85 more)
worker/: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  run_worker.py
(+1177 files in other folders)
