[tool.poetry]
name = "dealwise-lending"
version = "0.1.0"
description = ""
authors = ["ayan <ayan@psychic.dev>"]
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.111.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
pydantic = "^2.7.1"
langchain = "^0.0.317"
strenum = "^0.4.15"
qdrant-client = "^1.3.1"
sentence-transformers = "^2.2.2"
python-multipart = "^0.0.9"
gpt4all = "^1.0.5"
pymupdf = "^1.22.5"
supabase = "^2.0.0"
pyproject-hooks="1.1.0"
bs4 = "^0.0.1"
tiktoken = "^0.5.1"
pandas = "^2.1.1"
stripe = "^7.7.0"
sendgrid = "^6.11.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
openai = "^1.12.0"
babel = "^2.14.0"
firecrawl-py = "^0.0.8"
pypdf = "^4.2.0"
poetry-dotenv-plugin = "^0.2.0"
vellum-ai = "^0.6.1"

[tool.poetry.scripts]
start = "server.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
