[tool.poetry]
name = "finic"
version = "0.1.0"
description = ""
authors = ["ayan <ayan@psychic.dev>"]
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.111.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
pydantic = "^2.7.1"
strenum = "^0.4.15"
supabase = "^1.0.3"
pyproject-hooks="1.1.0"
bs4 = "^0.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
inflect = "^7.3.0"
openpyxl = "^3.1.5"
poetry-dotenv-plugin = "^0.2.0"
google-cloud-run = "^0.10.8"
baml-py = "^0.59.0"

[tool.poetry.scripts]
start = "server.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
