[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Ayan Bandyopadhyay"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
playwright = "^1.47.0"
requests = "^2.32.3"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
