[tool.poetry]
name = "deployer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^2.7.4"
google-cloud-build = "^3.24.2"
google-cloud-run = "^0.10.8"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
